Added and styled nav and header.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sunnyside</title>
-  <link rel="stylesheet" href="./styles.css">
-</head>
-<body>
-  <h1>Hello World</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Sunnyside</title>
+    <link rel="stylesheet" href="./styles.css" />
+  </head>
+  <body>
+    <!-- HEADER -->
+    <header>
+      <!-- NAV -->
+      <nav>
+        <div class="container navContainer">
+          <div>
+            <img src="./assets/icons/logo.svg" alt="Sunnyside logo" />
+          </div>
+          <div>
+            <img
+              src="/assets/icons/icon-hamburger.svg"
+              alt="Hamburger menu icon"
+            />
+          </div>
+        </div>
+      </nav>
+
+      <div class="container headerContainer">
+        <h1>We Are Creatives</h1>
+
+        <div>
+          <img
+            src="./assets/icons/icon-arrow-down.svg"
+            alt="White arrow pointing down"
+          />
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
