--- a/index.html
+++ b/index.html
@@ -15,18 +15,26 @@
           <div>
             <img src="./assets/icons/logo.svg" alt="Sunnyside logo" />
           </div>
-          <div>
-            <img
-              src="/assets/icons/icon-hamburger.svg"
-              alt="Hamburger menu icon"
-            />
+
+          <div class="hamburgerMenu">
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
+
+          <div class="hamburgerDropdown">
+            <ul>
+              <li><a href="">About</a></li>
+              <li><a href="">Services</a></li>
+              <li><a href="">Projects</a></li>
+              <li class="contactButton"><a href="">Contact</a></li>
+            </ul>
           </div>
         </div>
       </nav>
 
       <div class="container headerContainer">
         <h1>We Are Creatives</h1>
-
         <div>
           <img
             src="./assets/icons/icon-arrow-down.svg"
@@ -36,4 +44,5 @@
       </div>
     </header>
   </body>
+  <script src="./script.js"></script>
 </html>
