--- a/index.html
+++ b/index.html
@@ -43,6 +43,26 @@
         </div>
       </div>
     </header>
+
+    <!-- MAIN -->
+    <main>
+      <div class="mainContainer">
+        <div class="transformYourBrand">
+          <div class="transformYourBrandImgContainer">
+            <img src="./assets/mobile/image-transform.jpg" alt="" />
+          </div>
+          <div class="transformYourBrandTextContainer container">
+            <h2>Transform your brand</h2>
+            <p>
+              We are a full-service creative agency specializing in helping
+              brands grow fast. Engage your clients through compelling visuals
+              that do most of the marketing for you.
+            </p>
+            <button class="learnMoreButton">Learn More</button>
+          </div>
+        </div>
+      </div>
+    </main>
   </body>
   <script src="./script.js"></script>
 </html>
