--- a/index.html
+++ b/index.html
@@ -47,9 +47,13 @@
     <!-- MAIN -->
     <main>
       <div class="mainContainer">
+        <!-- TRANSFORM YOUR BRAND -->
         <div class="transformYourBrand">
           <div class="transformYourBrandImgContainer">
-            <img src="./assets/mobile/image-transform.jpg" alt="" />
+            <img
+              src="./assets/mobile/image-transform.jpg"
+              alt="An egg on a yellow background"
+            />
           </div>
           <div class="transformYourBrandTextContainer container">
             <h2>Transform your brand</h2>
@@ -57,6 +61,24 @@
               We are a full-service creative agency specializing in helping
               brands grow fast. Engage your clients through compelling visuals
               that do most of the marketing for you.
+            </p>
+            <button class="learnMoreButton">Learn More</button>
+          </div>
+        </div>
+        <!-- STAND OUT -->
+        <div class="standOut">
+          <div class="standOutImgContainer">
+            <img
+              src="./assets/mobile/image-stand-out.jpg"
+              alt="A soft red cup on a soft red background"
+            />
+          </div>
+          <div class="standOutTextContainer container">
+            <h2>Stand out to the right audience</h2>
+            <p>
+              Using a collaborative formula of designers, researchers,
+              photographers, videographers, and copywriters, we'll build and
+              extend your brand in digital places.
             </p>
             <button class="learnMoreButton">Learn More</button>
           </div>
