Updated header min-height. Added and styled remaining main section.

--- a/index.html
+++ b/index.html
@@ -83,6 +83,27 @@
             <button class="learnMoreButton">Learn More</button>
           </div>
         </div>
+        <!-- GRAPHIC DESIGN -->
+        <div class="graphicDesign">
+          <div class="graphicDesignContainer container">
+            <h3>Graphic Design</h3>
+            <p>
+              Great design makes you memorable. We deliver artwork that
+              underscores your brand message and captures potential client'
+              attention.
+            </p>
+          </div>
+        </div>
+        <!-- PHOTOGRAPHY -->
+        <div class="photography">
+          <div class="photographyContainer container">
+            <h3>Photography</h3>
+            <p>
+              Increase your credibility by getting the most stunning,
+              high-quality photos that improve your business image.
+            </p>
+          </div>
+        </div>
       </div>
     </main>
   </body>
