Added image gallery.

--- a/index.html
+++ b/index.html
@@ -148,7 +148,8 @@
           </div>
           <div class="testimonialText">
             <p class="clientReview">
-              Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!
+              Incredible end result! Our sales increased over 400% when we
+              worked with Sunnyside. Highly recommended!
             </p>
             <p class="clientName">Jennie F.</p>
             <p class="clientTitle">Business Owner</p>
@@ -156,6 +157,21 @@
         </div>
       </div>
     </section>
+
+    <div class="gallery">
+      <div class="galleryImg">
+        <img src="./assets/mobile/image-gallery-milkbottles.jpg" alt="" />
+      </div>
+      <div class="galleryImg">
+        <img src="./assets/mobile/image-gallery-orange.jpg" alt="" />
+      </div>
+      <div class="galleryImg">
+        <img src="./assets/mobile/image-gallery-cone.jpg" alt="" />
+      </div>
+      <div class="galleryImg">
+        <img src="./assets/mobile/image-gallery-sugar-cubes.jpg" alt="" />
+      </div>
+    </div>
   </body>
   <script src="./script.js"></script>
 </html>
