Added alt tags to gallery images. Added footer.

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
           <img
             src="./assets/icons/icon-arrow-down.svg"
             alt="White arrow pointing down"
+            class="footerLogo"
           />
         </div>
       </div>
@@ -158,20 +159,39 @@
       </div>
     </section>
 
+    <!-- GALLERY -->
     <div class="gallery">
       <div class="galleryImg">
-        <img src="./assets/mobile/image-gallery-milkbottles.jpg" alt="" />
+        <img
+          src="./assets/mobile/image-gallery-milkbottles.jpg"
+          alt="Milk bottles"
+        />
       </div>
       <div class="galleryImg">
-        <img src="./assets/mobile/image-gallery-orange.jpg" alt="" />
+        <img src="./assets/mobile/image-gallery-orange.jpg" alt="An orange" />
       </div>
       <div class="galleryImg">
-        <img src="./assets/mobile/image-gallery-cone.jpg" alt="" />
+        <img
+          src="./assets/mobile/image-gallery-cone.jpg"
+          alt=""
+          An
+          ice
+          cream
+          cone
+        />
       </div>
       <div class="galleryImg">
-        <img src="./assets/mobile/image-gallery-sugar-cubes.jpg" alt="" />
+        <img
+          src="./assets/mobile/image-gallery-sugar-cubes.jpg"
+          alt="Stacked sugar cubes"
+        />
       </div>
     </div>
+
+    <!-- FOOTER -->
+    <footer>
+      <div class="footerContainer container"></div>
+    </footer>
   </body>
   <script src="./script.js"></script>
 </html>
