Added additional color variable. Completed styling for footer.

--- a/index.html
+++ b/index.html
@@ -190,7 +190,40 @@
 
     <!-- FOOTER -->
     <footer>
-      <div class="footerContainer container"></div>
+      <div class="footerContainer container">
+        <div>
+          <img src="./assets/icons/footer-logo.svg" alt="Logo" />
+        </div>
+
+        <ul class="footerNav">
+          <li><a href="">About</a></li>
+          <li><a href="">Services</a></li>
+          <li><a href="">Projects</a></li>
+        </ul>
+
+        <ul class="footerLinks">
+          <li>
+            <a href=""
+              ><img src="./assets/icons/icon-facebook.svg" alt="Facebook"
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="./assets/icons/icon-instagram.svg" alt="Instagram"
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="./assets/icons/icon-twitter.svg" alt="Twitter"
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="./assets/icons/icon-pinterest.svg" alt="Pintrest"
+            /></a>
+          </li>
+        </ul>
+      </div>
     </footer>
   </body>
   <script src="./script.js"></script>
