Added responsive breakpoints up to 767px.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
             <img src="./assets/icons/logo.svg" alt="Sunnyside logo" />
           </div>
 
+          <!-- <div class="navMenu">
+            <ul>
+              <li><a href="">About</a></li>
+              <li><a href="">Services</a></li>
+              <li><a href="">Projects</a></li>
+              <li class="contactButton"><a href="">Contact</a></li>
+            </ul>
+          </div> -->
+
           <div class="hamburgerMenu">
             <span></span>
             <span></span>
