Added responsive breakpoints up to 1024px.

--- a/index.html
+++ b/index.html
@@ -7,58 +7,49 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <!-- HEADER -->
-    <header>
-      <!-- NAV -->
-      <nav>
-        <div class="container navContainer">
+    <div class="wrapper">
+      <!-- HEADER -->
+      <header>
+        <!-- NAV -->
+        <nav>
+          <div class="container navContainer">
+            <div>
+              <img src="./assets/icons/logo.svg" alt="Sunnyside logo" />
+            </div>
+
+            <div class="hamburgerMenu">
+              <span></span>
+              <span></span>
+              <span></span>
+            </div>
+
+            <div class="hamburgerDropdown">
+              <ul>
+                <li><a href="">About</a></li>
+                <li><a href="">Services</a></li>
+                <li><a href="">Projects</a></li>
+                <li class="contactButton"><a href="">Contact</a></li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+
+        <div class="container headerContainer">
+          <h1>We Are Creatives</h1>
           <div>
-            <img src="./assets/icons/logo.svg" alt="Sunnyside logo" />
-          </div>
-
-          <!-- <div class="navMenu">
-            <ul>
-              <li><a href="">About</a></li>
-              <li><a href="">Services</a></li>
-              <li><a href="">Projects</a></li>
-              <li class="contactButton"><a href="">Contact</a></li>
-            </ul>
-          </div> -->
-
-          <div class="hamburgerMenu">
-            <span></span>
-            <span></span>
-            <span></span>
-          </div>
-
-          <div class="hamburgerDropdown">
-            <ul>
-              <li><a href="">About</a></li>
-              <li><a href="">Services</a></li>
-              <li><a href="">Projects</a></li>
-              <li class="contactButton"><a href="">Contact</a></li>
-            </ul>
+            <img
+              src="./assets/icons/icon-arrow-down.svg"
+              alt="White arrow pointing down"
+              class="footerLogo"
+            />
           </div>
         </div>
-      </nav>
+      </header>
 
-      <div class="container headerContainer">
-        <h1>We Are Creatives</h1>
-        <div>
-          <img
-            src="./assets/icons/icon-arrow-down.svg"
-            alt="White arrow pointing down"
-            class="footerLogo"
-          />
-        </div>
-      </div>
-    </header>
-
-    <!-- MAIN -->
-    <main>
-      <div class="mainContainer">
-        <!-- TRANSFORM YOUR BRAND -->
-        <div class="transformYourBrand">
+      <!-- MAIN -->
+      <main>
+        <div class="mainContainer">
+          <!-- TRANSFORM YOUR BRAND -->
           <div class="transformYourBrandImgContainer">
             <img
               src="./assets/mobile/image-transform.jpg"
@@ -74,9 +65,7 @@
             </p>
             <button class="learnMoreButton">Learn More</button>
           </div>
-        </div>
-        <!-- STAND OUT -->
-        <div class="standOut">
+          <!-- STAND OUT -->
           <div class="standOutImgContainer">
             <img
               src="./assets/mobile/image-stand-out.jpg"
@@ -92,148 +81,148 @@
             </p>
             <button class="learnMoreButton">Learn More</button>
           </div>
-        </div>
-        <!-- GRAPHIC DESIGN -->
-        <div class="graphicDesign">
-          <div class="graphicDesignContainer container">
-            <h3>Graphic Design</h3>
-            <p>
-              Great design makes you memorable. We deliver artwork that
-              underscores your brand message and captures potential client'
-              attention.
-            </p>
+          <!-- GRAPHIC DESIGN -->
+          <div class="graphicDesign">
+            <div class="graphicDesignContainer container">
+              <h3>Graphic Design</h3>
+              <p>
+                Great design makes you memorable. We deliver artwork that
+                underscores your brand message and captures potential client'
+                attention.
+              </p>
+            </div>
+          </div>
+          <!-- PHOTOGRAPHY -->
+          <div class="photography">
+            <div class="photographyContainer container">
+              <h3>Photography</h3>
+              <p>
+                Increase your credibility by getting the most stunning,
+                high-quality photos that improve your business image.
+              </p>
+            </div>
           </div>
         </div>
-        <!-- PHOTOGRAPHY -->
-        <div class="photography">
-          <div class="photographyContainer container">
-            <h3>Photography</h3>
-            <p>
-              Increase your credibility by getting the most stunning,
-              high-quality photos that improve your business image.
-            </p>
-          </div>
-        </div>
-      </div>
-    </main>
+      </main>
 
-    <!-- TESTIMONIALS -->
-    <section class="testimonials">
-      <div class="testimonialsContainer container">
-        <h4>Client Testimonials</h4>
-        <!-- TESTIMONAL 1 -->
-        <div class="testimonial">
-          <div class="testimonialImgContainer">
-            <img src="./assets/icons/image-emily.jpg" alt="Emily R." />
+      <!-- TESTIMONIALS -->
+      <section class="testimonials">
+        <div class="testimonialsContainer container">
+          <h4>Client Testimonials</h4>
+          <!-- TESTIMONAL 1 -->
+          <div class="testimonial">
+            <div class="testimonialImgContainer">
+              <img src="./assets/icons/image-emily.jpg" alt="Emily R." />
+            </div>
+            <div class="testimonialText">
+              <p class="clientReview">
+                We put our trust in Sunnyside and they delivered, making sure
+                our needs were met and deadlines were always hit.
+              </p>
+              <p class="clientName">Emily R.</p>
+              <p class="clientTitle">Marketing Director</p>
+            </div>
           </div>
-          <div class="testimonialText">
-            <p class="clientReview">
-              We put our trust in Sunnyside and they delivered, making sure our
-              needs were met and deadlines were always hit.
-            </p>
-            <p class="clientName">Emily R.</p>
-            <p class="clientTitle">Marketing Director</p>
+
+          <!-- TESTIMONAL 2 -->
+          <div class="testimonial">
+            <div class="testimonialImgContainer">
+              <img src="./assets/icons/image-thomas.jpg" alt="Thomas S." />
+            </div>
+            <div class="testimonialText">
+              <p class="clientReview">
+                Sunnyside's enthusiasm coupled with their keen interest in our
+                brand's success made it a satisfying and enjoyable experience.
+              </p>
+              <p class="clientName">Thomas S.</p>
+              <p class="clientTitle">Chief Operating Officer</p>
+            </div>
+          </div>
+
+          <!-- TESTIMONAL 3 -->
+          <div class="testimonial">
+            <div class="testimonialImgContainer">
+              <img src="./assets/icons/image-jennie.jpg" alt="Jennie F." />
+            </div>
+            <div class="testimonialText">
+              <p class="clientReview">
+                Incredible end result! Our sales increased over 400% when we
+                worked with Sunnyside. Highly recommended!
+              </p>
+              <p class="clientName">Jennie F.</p>
+              <p class="clientTitle">Business Owner</p>
+            </div>
           </div>
         </div>
+      </section>
 
-        <!-- TESTIMONAL 2 -->
-        <div class="testimonial">
-          <div class="testimonialImgContainer">
-            <img src="./assets/icons/image-thomas.jpg" alt="Thomas S." />
-          </div>
-          <div class="testimonialText">
-            <p class="clientReview">
-              Sunnyside's enthusiasm coupled with their keen interest in our
-              brand's success made it a satisfying and enjoyable experience.
-            </p>
-            <p class="clientName">Thomas S.</p>
-            <p class="clientTitle">Chief Operating Officer</p>
-          </div>
+      <!-- GALLERY -->
+      <div class="gallery">
+        <div class="galleryImg">
+          <img
+            src="./assets/mobile/image-gallery-milkbottles.jpg"
+            alt="Milk bottles"
+          />
         </div>
-
-        <!-- TESTIMONAL 3 -->
-        <div class="testimonial">
-          <div class="testimonialImgContainer">
-            <img src="./assets/icons/image-jennie.jpg" alt="Jennie F." />
-          </div>
-          <div class="testimonialText">
-            <p class="clientReview">
-              Incredible end result! Our sales increased over 400% when we
-              worked with Sunnyside. Highly recommended!
-            </p>
-            <p class="clientName">Jennie F.</p>
-            <p class="clientTitle">Business Owner</p>
-          </div>
+        <div class="galleryImg">
+          <img src="./assets/mobile/image-gallery-orange.jpg" alt="An orange" />
+        </div>
+        <div class="galleryImg">
+          <img
+            src="./assets/mobile/image-gallery-cone.jpg"
+            alt=""
+            An
+            ice
+            cream
+            cone
+          />
+        </div>
+        <div class="galleryImg">
+          <img
+            src="./assets/mobile/image-gallery-sugar-cubes.jpg"
+            alt="Stacked sugar cubes"
+          />
         </div>
       </div>
-    </section>
 
-    <!-- GALLERY -->
-    <div class="gallery">
-      <div class="galleryImg">
-        <img
-          src="./assets/mobile/image-gallery-milkbottles.jpg"
-          alt="Milk bottles"
-        />
-      </div>
-      <div class="galleryImg">
-        <img src="./assets/mobile/image-gallery-orange.jpg" alt="An orange" />
-      </div>
-      <div class="galleryImg">
-        <img
-          src="./assets/mobile/image-gallery-cone.jpg"
-          alt=""
-          An
-          ice
-          cream
-          cone
-        />
-      </div>
-      <div class="galleryImg">
-        <img
-          src="./assets/mobile/image-gallery-sugar-cubes.jpg"
-          alt="Stacked sugar cubes"
-        />
-      </div>
+      <!-- FOOTER -->
+      <footer>
+        <div class="footerContainer container">
+          <div>
+            <img src="./assets/icons/footer-logo.svg" alt="Logo" />
+          </div>
+
+          <ul class="footerNav">
+            <li><a href="">About</a></li>
+            <li><a href="">Services</a></li>
+            <li><a href="">Projects</a></li>
+          </ul>
+
+          <ul class="footerLinks">
+            <li>
+              <a href=""
+                ><img src="./assets/icons/icon-facebook.svg" alt="Facebook"
+              /></a>
+            </li>
+            <li>
+              <a href=""
+                ><img src="./assets/icons/icon-instagram.svg" alt="Instagram"
+              /></a>
+            </li>
+            <li>
+              <a href=""
+                ><img src="./assets/icons/icon-twitter.svg" alt="Twitter"
+              /></a>
+            </li>
+            <li>
+              <a href=""
+                ><img src="./assets/icons/icon-pinterest.svg" alt="Pintrest"
+              /></a>
+            </li>
+          </ul>
+        </div>
+      </footer>
     </div>
-
-    <!-- FOOTER -->
-    <footer>
-      <div class="footerContainer container">
-        <div>
-          <img src="./assets/icons/footer-logo.svg" alt="Logo" />
-        </div>
-
-        <ul class="footerNav">
-          <li><a href="">About</a></li>
-          <li><a href="">Services</a></li>
-          <li><a href="">Projects</a></li>
-        </ul>
-
-        <ul class="footerLinks">
-          <li>
-            <a href=""
-              ><img src="./assets/icons/icon-facebook.svg" alt="Facebook"
-            /></a>
-          </li>
-          <li>
-            <a href=""
-              ><img src="./assets/icons/icon-instagram.svg" alt="Instagram"
-            /></a>
-          </li>
-          <li>
-            <a href=""
-              ><img src="./assets/icons/icon-twitter.svg" alt="Twitter"
-            /></a>
-          </li>
-          <li>
-            <a href=""
-              ><img src="./assets/icons/icon-pinterest.svg" alt="Pintrest"
-            /></a>
-          </li>
-        </ul>
-      </div>
-    </footer>
   </body>
   <script src="./script.js"></script>
 </html>
