Re-factored main to update class naming convention.

--- a/index.html
+++ b/index.html
@@ -59,40 +59,48 @@
       <main>
         <div class="mainContainer">
           <!-- TRANSFORM YOUR BRAND -->
-          <div class="transformYourBrandImgContainer">
+          <div class="transformYourBrandImg">
             <img
               src="./assets/mobile/image-transform.jpg"
               alt="An egg on a yellow background"
             />
           </div>
-          <div class="transformYourBrandTextContainer container">
-            <h2>Transform your brand</h2>
-            <p>
-              We are a full-service creative agency specializing in helping
-              brands grow fast. Engage your clients through compelling visuals
-              that do most of the marketing for you.
-            </p>
-            <button class="learnMoreButton">Learn More</button>
+
+          <div class="transformYourBrandText">
+            <div class="transformYourBrandTextContainer container">
+              <h2>Transform your brand</h2>
+              <p>
+                We are a full-service creative agency specializing in helping
+                brands grow fast. Engage your clients through compelling visuals
+                that do most of the marketing for you.
+              </p>
+              <button class="learnMoreButton">Learn More</button>
+            </div>
           </div>
+
           <!-- STAND OUT -->
-          <div class="standOutImgContainer">
+          <div class="standOutImg">
             <img
               src="./assets/mobile/image-stand-out.jpg"
               alt="A soft red cup on a soft red background"
             />
           </div>
-          <div class="standOutTextContainer container">
-            <h2>Stand out to the right audience</h2>
-            <p>
-              Using a collaborative formula of designers, researchers,
-              photographers, videographers, and copywriters, we'll build and
-              extend your brand in digital places.
-            </p>
-            <button class="learnMoreButton">Learn More</button>
+
+          <div class="standOutText">
+            <div class="standOutTextContainer container">
+              <h2>Stand out to the right audience</h2>
+              <p>
+                Using a collaborative formula of designers, researchers,
+                photographers, videographers, and copywriters, we'll build and
+                extend your brand in digital places.
+              </p>
+              <button class="learnMoreButton">Learn More</button>
+            </div>
           </div>
+
           <!-- GRAPHIC DESIGN -->
           <div class="graphicDesign">
-            <div class="graphicDesignContainer container">
+            <div class="graphicDesignText container">
               <h3>Graphic Design</h3>
               <p>
                 Great design makes you memorable. We deliver artwork that
@@ -103,7 +111,7 @@
           </div>
           <!-- PHOTOGRAPHY -->
           <div class="photography">
-            <div class="photographyContainer container">
+            <div class="photographyText container">
               <h3>Photography</h3>
               <p>
                 Increase your credibility by getting the most stunning,
