--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
           <h4>Client Testimonials</h4>
           <!-- TESTIMONAL 1 -->
           <div class="testimonial">
-            <div class="testimonialImgContainer">
+            <div class="testimonialImg">
               <img src="./assets/icons/image-emily.jpg" alt="Emily R." />
             </div>
             <div class="testimonialText">
@@ -143,7 +143,7 @@
 
           <!-- TESTIMONAL 2 -->
           <div class="testimonial">
-            <div class="testimonialImgContainer">
+            <div class="testimonialImg">
               <img src="./assets/icons/image-thomas.jpg" alt="Thomas S." />
             </div>
             <div class="testimonialText">
@@ -158,7 +158,7 @@
 
           <!-- TESTIMONAL 3 -->
           <div class="testimonial">
-            <div class="testimonialImgContainer">
+            <div class="testimonialImg">
               <img src="./assets/icons/image-jennie.jpg" alt="Jennie F." />
             </div>
             <div class="testimonialText">
@@ -187,11 +187,7 @@
         <div class="galleryImg">
           <img
             src="./assets/mobile/image-gallery-cone.jpg"
-            alt=""
-            An
-            ice
-            cream
-            cone
+            alt="An ice cream cone"
           />
         </div>
         <div class="galleryImg">
