Re-factored to group media queries by breakpoints over sections. Added responsive breakpoints up to 1280px.

--- a/index.html
+++ b/index.html
@@ -126,48 +126,50 @@
       <section class="testimonials">
         <div class="testimonialsContainer container">
           <h4>Client Testimonials</h4>
-          <!-- TESTIMONAL 1 -->
-          <div class="testimonial">
-            <div class="testimonialImg">
-              <img src="./assets/icons/image-emily.jpg" alt="Emily R." />
+          <div class="clientTestimonials">
+            <!-- TESTIMONAL 1 -->
+            <div class="testimonial">
+              <div class="testimonialImg">
+                <img src="./assets/icons/image-emily.jpg" alt="Emily R." />
+              </div>
+              <div class="testimonialText">
+                <p class="clientReview">
+                  We put our trust in Sunnyside and they delivered, making sure
+                  our needs were met and deadlines were always hit.
+                </p>
+                <p class="clientName">Emily R.</p>
+                <p class="clientTitle">Marketing Director</p>
+              </div>
             </div>
-            <div class="testimonialText">
-              <p class="clientReview">
-                We put our trust in Sunnyside and they delivered, making sure
-                our needs were met and deadlines were always hit.
-              </p>
-              <p class="clientName">Emily R.</p>
-              <p class="clientTitle">Marketing Director</p>
-            </div>
-          </div>
 
-          <!-- TESTIMONAL 2 -->
-          <div class="testimonial">
-            <div class="testimonialImg">
-              <img src="./assets/icons/image-thomas.jpg" alt="Thomas S." />
+            <!-- TESTIMONAL 2 -->
+            <div class="testimonial">
+              <div class="testimonialImg">
+                <img src="./assets/icons/image-thomas.jpg" alt="Thomas S." />
+              </div>
+              <div class="testimonialText">
+                <p class="clientReview">
+                  Sunnyside's enthusiasm coupled with their keen interest in our
+                  brand's success made it a satisfying and enjoyable experience.
+                </p>
+                <p class="clientName">Thomas S.</p>
+                <p class="clientTitle">Chief Operating Officer</p>
+              </div>
             </div>
-            <div class="testimonialText">
-              <p class="clientReview">
-                Sunnyside's enthusiasm coupled with their keen interest in our
-                brand's success made it a satisfying and enjoyable experience.
-              </p>
-              <p class="clientName">Thomas S.</p>
-              <p class="clientTitle">Chief Operating Officer</p>
-            </div>
-          </div>
 
-          <!-- TESTIMONAL 3 -->
-          <div class="testimonial">
-            <div class="testimonialImg">
-              <img src="./assets/icons/image-jennie.jpg" alt="Jennie F." />
-            </div>
-            <div class="testimonialText">
-              <p class="clientReview">
-                Incredible end result! Our sales increased over 400% when we
-                worked with Sunnyside. Highly recommended!
-              </p>
-              <p class="clientName">Jennie F.</p>
-              <p class="clientTitle">Business Owner</p>
+            <!-- TESTIMONAL 3 -->
+            <div class="testimonial">
+              <div class="testimonialImg">
+                <img src="./assets/icons/image-jennie.jpg" alt="Jennie F." />
+              </div>
+              <div class="testimonialText">
+                <p class="clientReview">
+                  Incredible end result! Our sales increased over 400% when we
+                  worked with Sunnyside. Highly recommended!
+                </p>
+                <p class="clientName">Jennie F.</p>
+                <p class="clientTitle">Business Owner</p>
+              </div>
             </div>
           </div>
         </div>
