Adjusted headerContainer spacing.

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 brands grow fast. Engage your clients through compelling visuals
                 that do most of the marketing for you.
               </p>
-              <button class="learnMoreButton">Learn More</button>
+              <a href="" class="learnMoreButton">Learn More</a>
             </div>
           </div>
 
@@ -94,7 +94,7 @@
                 photographers, videographers, and copywriters, we'll build and
                 extend your brand in digital places.
               </p>
-              <button class="learnMoreButton">Learn More</button>
+              <a href="" class="learnMoreButton">Learn More</a>
             </div>
           </div>
 
