Updated to change images at appropriate breakpoints. Removed min-height from gallery section breakpoints.

--- a/index.html
+++ b/index.html
@@ -60,10 +60,16 @@
         <div class="mainContainer">
           <!-- TRANSFORM YOUR BRAND -->
           <div class="transformYourBrandImg">
-            <img
-              src="./assets/mobile/image-transform.jpg"
-              alt="An egg on a yellow background"
-            />
+            <picture>
+              <source
+                srcset="./assets/desktop/image-transform.jpg"
+                media="(min-width: 640px)"
+              />
+              <img
+                src="./assets/mobile/image-transform.jpg"
+                alt="An egg on a yellow background"
+              />
+            </picture>
           </div>
 
           <div class="transformYourBrandText">
@@ -80,10 +86,16 @@
 
           <!-- STAND OUT -->
           <div class="standOutImg">
-            <img
-              src="./assets/mobile/image-stand-out.jpg"
-              alt="A soft red cup on a soft red background"
-            />
+            <picture>
+              <source
+                srcset="./assets/desktop/image-stand-out.jpg"
+                media="(min-width: 640px)"
+              />
+              <img
+                src="./assets/mobile/image-stand-out.jpg"
+                alt="A soft red cup on a soft red background"
+              />
+            </picture>
           </div>
 
           <div class="standOutText">
@@ -177,26 +189,58 @@
 
       <!-- GALLERY -->
       <div class="gallery">
+        <!-- MILK BOTTLES -->
         <div class="galleryImg">
-          <img
-            src="./assets/mobile/image-gallery-milkbottles.jpg"
-            alt="Milk bottles"
-          />
+          <picture>
+            <source
+              srcset="./assets/desktop/image-gallery-milkbottles.jpg"
+              media="(min-width: 640px)"
+            />
+            <img
+              src="./assets/mobile/image-gallery-milkbottles.jpg"
+              alt="Milk bottles"
+            />
+          </picture>
         </div>
+
+        <!-- ORANGE -->
         <div class="galleryImg">
-          <img src="./assets/mobile/image-gallery-orange.jpg" alt="An orange" />
+          <picture>
+            <source
+              srcset="./assets/desktop/image-gallery-orange.jpg"
+              media="(min-width: 640px)"
+            />
+            <img
+              src="./assets/mobile/image-gallery-orange.jpg"
+              alt="An orange"
+            />
+          </picture>
         </div>
+        <!-- CONE -->
         <div class="galleryImg">
-          <img
-            src="./assets/mobile/image-gallery-cone.jpg"
-            alt="An ice cream cone"
-          />
+          <picture>
+            <source
+              srcset="./assets/desktop/image-gallery-cone.jpg"
+              media="(min-width: 640px)"
+            />
+            <img
+              src="./assets/mobile/image-gallery-cone.jpg"
+              alt="An ice cream cone"
+            />
+          </picture>
         </div>
+        <!-- SUGAR CUBES -->
         <div class="galleryImg">
-          <img
-            src="./assets/mobile/image-gallery-sugar-cubes.jpg"
-            alt="Stacked sugar cubes"
-          />
+          <picture>
+            <source
+              srcset="./assets/desktop/image-gallery-sugar-cubes.jpg"
+              media="(min-width: 640px)"
+            />
+            <img
+              src="./assets/mobile/image-gallery-sugar-cubes.jpg"
+              alt="Stacked sugar cubes"
+            />
+          </picture>
         </div>
       </div>
 
