Added animations to mobile nav and headerContainer. Re-factored HTML.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div>
               <img src="./assets/icons/logo.svg" alt="Sunnyside logo" />
             </div>
-
+            <!-- DESKTOP AND TABLET NAV -->
             <div class="navMenu">
               <ul>
                 <li><a href="">About</a></li>
@@ -25,13 +25,13 @@
                 <li class="contactButton"><a href="">Contact</a></li>
               </ul>
             </div>
-
+            <!-- HAMBURGER MENU -->
             <div class="hamburgerMenu">
               <span></span>
               <span></span>
               <span></span>
             </div>
-
+            <!-- MOBILE NAV -->
             <div class="hamburgerDropdown">
               <ul>
                 <li><a href="">About</a></li>
@@ -42,7 +42,7 @@
             </div>
           </div>
         </nav>
-
+        <!-- HEADER CONTAINER -->
         <div class="container headerContainer">
           <h1>We Are Creatives</h1>
           <div>
@@ -58,7 +58,7 @@
       <!-- MAIN -->
       <main>
         <div class="mainContainer">
-          <!-- TRANSFORM YOUR BRAND -->
+          <!-- TRANSFORM YOUR BRAND IMAGE -->
           <div class="transformYourBrandImg">
             <picture>
               <source
@@ -71,7 +71,7 @@
               />
             </picture>
           </div>
-
+          <!-- TRANSFORM YOUR BRAND TEXT -->
           <div class="transformYourBrandText">
             <div class="transformYourBrandTextContainer container">
               <h2>Transform your brand</h2>
@@ -83,8 +83,7 @@
               <a href="" class="learnMoreButton">Learn More</a>
             </div>
           </div>
-
-          <!-- STAND OUT -->
+          <!-- STAND OUT IMAGE -->
           <div class="standOutImg">
             <picture>
               <source
@@ -97,7 +96,7 @@
               />
             </picture>
           </div>
-
+          <!-- STAND OUT TEXT -->
           <div class="standOutText">
             <div class="standOutTextContainer container">
               <h2>Stand out to the right audience</h2>
@@ -109,7 +108,6 @@
               <a href="" class="learnMoreButton">Learn More</a>
             </div>
           </div>
-
           <!-- GRAPHIC DESIGN -->
           <div class="graphicDesign">
             <div class="graphicDesignText container">
@@ -153,7 +151,6 @@
                 <p class="clientTitle">Marketing Director</p>
               </div>
             </div>
-
             <!-- TESTIMONAL 2 -->
             <div class="testimonial">
               <div class="testimonialImg">
@@ -168,7 +165,6 @@
                 <p class="clientTitle">Chief Operating Officer</p>
               </div>
             </div>
-
             <!-- TESTIMONAL 3 -->
             <div class="testimonial">
               <div class="testimonialImg">
@@ -202,7 +198,6 @@
             />
           </picture>
         </div>
-
         <!-- ORANGE -->
         <div class="galleryImg">
           <picture>
@@ -247,17 +242,19 @@
       <!-- FOOTER -->
       <footer>
         <div class="footerContainer container">
+          <!-- FOOTER LOGO -->
           <div>
             <img src="./assets/icons/footer-logo.svg" alt="Logo" />
           </div>
-
+          <!-- FOOTER NAV -->
           <ul class="footerNav">
             <li><a href="">About</a></li>
             <li><a href="">Services</a></li>
             <li><a href="">Projects</a></li>
           </ul>
-
+          <!-- FOOTER LINKS -->
           <ul class="footerLinks">
+            <!-- FACEBOOK -->
             <li>
               <a href="https://www.facebook.com/" target="_blank"
                 ><svg width="20" height="20" xmlns="http://www.w3.org/2000/svg">
@@ -268,6 +265,7 @@
                   /></svg
               ></a>
             </li>
+            <!-- INSTAGRAM -->
             <li>
               <a href="https://www.instagram.com/" target="_blank"
                 ><svg width="20" height="20" xmlns="http://www.w3.org/2000/svg">
@@ -278,6 +276,7 @@
                   /></svg
               ></a>
             </li>
+            <!-- TWITTER -->
             <li>
               <a href="https://x.com/" target="_blank"
                 ><svg width="20" height="17" xmlns="http://www.w3.org/2000/svg">
@@ -288,6 +287,7 @@
                   /></svg
               ></a>
             </li>
+            <!-- PINTEREST -->
             <li>
               <a href="https://www.pinterest.ca/" target="_blank"
                 ><svg width="20" height="20" xmlns="http://www.w3.org/2000/svg">
